version 1.0 still cant count no finish game popup