@@ -1,1 +1,7 @@
 # CN311_Socket_Project
+
+javac --module-path "C:/javafx-sdk-21/lib" --add-modules javafx.controls GameServer.java GameClient.java Board.java
+
+java --module-path "C:/javafx-sdk-21/lib" --add-modules javafx.controls GameServer
+
+java --module-path "C:/javafx-sdk-21/lib" --add-modules javafx.controls GameClient
